# greendigit-ecml-pkdd-2026-challenge

./: .gitignore  README.md
data/: forecast_baseline.csv  prepare_data.py  site_config.json  task_a_series.csv
data/raw_metrics/: summary_sites_15m.csv  summary_sites_daily.csv  summary_sites_hourly.csv  summary_sites_metadata.json
task-a/: README.md  guidelines.md  pyproject.toml
task-a/config/: data.yaml  eval.yaml  model.yaml
task-a/outputs/: baseline_model.json  detection_submission.csv  forecast_submission.csv  metrics.json  peak_submission.csv
task-a/scripts/: evaluate.py  predict.py  predict_detection.py  predict_peaks.py  prepare_data.py  serve_api.py  train_baseline.py
task-a/src/task_a/: __init__.py  api.py  cli.py  dataio.py  evaluation.py  labels.py  preprocess.py  schemas.py  submission.py
task-a/src/task_a.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
task-a/src/task_a/models/: __init__.py  baseline.py
task-a/tests/: test_end_to_end.py  test_evaluation.py  test_pipeline.py  test_submission.py
task-b/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
task-b/dirac_sim/: __init__.py  __main__.py
task-b/dirac_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
task-b/dirac_sim/api/: forecast_client.py  schemas.py  server.py
task-b/dirac_sim/backends/: dirac_backend.py  slurm_backend.py
task-b/dirac_sim/baselines/: fcfs.py  greedy_carbon.py
task-b/dirac_sim/core/: evaluator.py  job_queue.py  scheduler.py  site_model.py  wms.py
task-b/docker/: Dockerfile.api  prometheus.yml
task-b/docs/: challenge_refs.bib  challenge_tasks.tex
task-b/examples/: custom_scheduler_template.py  forecast_api_demo.py  forecast_shift_probe.py  run_simulation.py  test_policy.py
task-b/output/: dispatch_log.csv  execution_report.csv  score_metrics.json  score_summary.txt
task-b/results/: baseline_execution_report.csv  dispatch_log.csv  execution_report.csv  score_metrics.json  score_summary.txt
task-b/tests/: conftest.py  test_api.py  test_core.py
