[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-a"
version = "0.1.0"
description = "Task A forecasting and evaluation framework for the ECML PKDD GreenDIGIT challenge"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=8.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
task-a = "task_a.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["task_a*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
